tests/errors/intrinsics5.f90
program intrinsics5
    print *, ior(1, 1_8)
end program